[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "3.0.8", default-features = false }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
